--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,26 +1,15 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto');
+
 * {
-  font-family: "Ubuntu", sans-serif;
+  font-family: 'Ubuntu', sans-serif;
   margin: 0%;
 }
-
-main::before {
-  background: url("/static/img/bg.jpg") no-repeat;
-  background-size: 1550px auto;
-  content: " ";
-  position: absolute;
-  top: 0px;
-  left: 0px;
-  height: 100%;
-  width: 100%;
-  opacity: 0.5;
-  z-index: -1;
-}
-main {
-  width: 100%;
+body {
+  background: linear-gradient(to right, #78a7ba 0%, #385D6C 50%, #78a7ba 99%);
 }
 
 #navbar {
-  width: 100%;
+  width:100%;
   position: sticky;
   top: 0px;
   left: 0%;
@@ -32,7 +21,7 @@ main {
   content: " ";
   position: absolute;
   top: -7px;
-  left: 0px;
+  left: -8px;
   height: 100%;
   width: 100%;
   background-color: black;
@@ -45,7 +34,7 @@ main {
   height: 100px;
   width: 100px;
   border-radius: 20px;
-  background: url(/static/img/growth.png) center center / 102px 101px no-repeat;
+  background: url(growth.png) center center / 102px 101px no-repeat;
   margin: 10px 23px;
 }
 
@@ -56,6 +45,7 @@ main {
 #navbar li {
   margin: 15px 70px;
   list-style: none;
+
 }
 
 #navbar li a {
@@ -71,7 +61,7 @@ main {
   display: block;
   border: 3px solid white;
   background-color: transparent;
-  color: white;
+  color:white;
   font-weight: bold;
   border-radius: 10px;
   font-size: 1.3rem;
@@ -85,12 +75,64 @@ main {
   color: black;
   background-color: white;
 }
+.report-form {
+  font-family: "Roboto", sans-serif;
+  width: 650px;
+  margin: 30px auto;
+  background: linear-gradient(to right, #ffffff 0%, #fafafa 50%, #ffffff 99%);
+  border-radius: 10px;
+}
 
-.form-input {
-  margin: 10px;
+.form-header {
+  background-color: #EFF0F1;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+}
+
+.form-header h1 {
+  font-size: 30px;
+  text-align: center;
+  color: #666;
+  padding: 20px 0;
+  border-bottom: 1px solid #cccccc;
+}
+
+.form-body {
+  padding: 10px 40px;
+  color: #666;
+}
+
+.group{
+  margin:40px 0px;
+}
+#group-name{
+  margin-top:10px;
+}
+.input-group {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.total-group{
+  margin-bottom: 20px;
+  display:flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+.form-group {
+  margin-bottom: 20px;
+}
+
+.form-body .label-title {
+  color: #1BBA93;
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+.form-body .form-input {
   font-size: 17px;
   box-sizing: border-box;
-  width: 80%;
+  width: 100%;
   height: 34px;
   padding-left: 10px;
   padding-right: 10px;
@@ -102,77 +144,50 @@ main {
   outline: none;
 }
 
-.label-title {
+
+input[type="text"] {
+  margin: 5px 2px;
+}
+
+::-webkit-input-placeholder {
+  color: #d9d9d9;
+}
+
+
+.form-footer {
+  clear: both;
+}
+
+.report-form .form-footer {
+  background-color: #EFF0F1;
+  border-bottom-left-radius: 10px;
+  border-bottom-right-radius: 10px;
+  padding: 10px 40px;
+  text-align: right;
+  border-top: 1px solid #cccccc;
+}
+
+.form-footer span {
+  float: left;
+  margin-top: 10px;
+  color: #999;
+  font-style: italic;
+  font-weight: thin;
+}
+
+.btn {
+  display: block;
+  padding: 10px 20px;
+  background-color: #1BBA93;
+  font-size: 17px;
+  border: none;
+  border-radius: 5px;
+  color: #bcf5e7;
+  cursor: pointer;
+  margin: 6px auto;
+}
+
+.btn:hover {
+  background-color: #169c7b;
   color: white;
-  font-size: 30px;
-  font-weight: bold;
-  margin: 10px;
-}
-
-main {
-  width: 100%;
-}
-
-.form-group::before {
-  background-color: black;
-  height: 225px;
-  width: 69%;
-  border-radius: 15px;
-  content: " ";
-  position: absolute;
-  opacity: 0.5;
-  z-index: -1;
-  top: 245px;
-  margin: auto;
-}
-
-.form-group {
-  width: 66%;
-  border: 2px solid black;
-  padding: 20px;
-  border-radius: 15px;
-  margin: auto auto;
-  margin-top: 120px;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  text-align: left;
-}
-
-.box1 {
-  height: 150px;
-  width: 150px;
-  border: 2px solid black;
-  margin: 15px;
-}
-
-.box2 {
-  height: 150px;
-  width: 150px;
-  border: 2px solid black;
-  margin: 15px;
-}
-#outer-container1 {
-  display: none;
-}
-#outer-container2 {
-  display: none;
-}
-#container1 {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
-
-#container2 {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
-}
-
-.box-container {
-  display: flex;
-  flex-direction: row;
-  justify-content: center;
 }
